--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ html {
 }
 
 html {
-  font: "ubuntu", sans-serif;
+  font-family: "ubuntu", sans-serif;
   line-height: 100%/1.3;
 }
 
@@ -35,9 +35,12 @@ h1 {
   color: #fff;
 }
 
-a {
-  color: #fff;
+ul {
   list-style-type: none;
-  text-decoration: none;
+}
 
+a {
+  color: #6c8fe0;
+  text-decoration: none;
+  font: "ubuntu";
 }
