--- a/css/main.css
+++ b/css/main.css
@@ -12,15 +12,11 @@ html {
   text-size-adjust: 100%;
   box-sizing: border-box;
   font: normal 100%/1.3 sans-serif;
+  font-family: Ubuntu, sans-serif;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
-}
-
-html {
-  font-family: "ubuntu", sans-serif;
-  line-height: 100%/1.3;
 }
 
 body {
@@ -30,39 +26,49 @@ body {
 header {
   background-color: #18294f;
   width: 100%;
+  overflow: hidden;
+  color: #fff;
 }
 
-h1 {
+header h1 {
   color: #fff;
   text-align: center;
   padding: .75rem;
   margin: 0;
 }
 
-ul {
+nav ul {
   list-style-type: none;
   padding: 0;
   margin: .9rem;
+  font-size: 1.125rem;
 }
 
-a {
+nav a {
   color: #6c8fe0;
   text-decoration: none;
+  white-space: nowrap;
 }
 
-li {
+nav a:hover {
+  background-color: #6c8fe0;
+  color: #fff;
+}
+
+nav li {
   padding: .3em 0 .5em;
+  float: left;
+  width: 100%;
+}
+
+nav li:hover {
+  background-color: #6c8fe0;
+  color: #fff;
 }
 
 @media only screen and (min-width: 25em) {
 
-  header {
-    position: absolute;
-  }
-
-  li {
-    position: relative;
-    float: left;
+  nav li {
     width: 50%;
     text-align: center;
   }
@@ -76,12 +82,41 @@ li {
 
   html {
     font-size: 110%;
-    line-height:1.4;
+    line-height: 1.4;
   }
 
-  li {
+  nav li {
     width: 25%;
   }
 }
 
 @media only screen and (min-width: 60em) {
+
+  html {
+    font-size: 120%;
+    line-height: 1.5;
+  }
+
+  h1,
+  nav {
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+  ul {
+    float: right;
+    width: 70%;
+  }
+
+  nav {
+    width: 70%;
+  }
+}
+
+@media only screen and (min-width: 90em) {
+
+  html {
+    font-size: 130%;
+    line-height: 1.5;
+  }
+}
